fixed team members gap

--- a/style/style.css
+++ b/style/style.css
@@ -1408,11 +1408,13 @@ header {
 
 @media only screen and (min-width: 320px) and (max-width: 768px) {
   .core-4 {
+    margin-top: 0;
     flex-direction: column;
-    gap: 2rem;
+    gap: 4rem;
+    margin-bottom: 4rem;
   }
   .team {
-    padding: 7rem 0;
+    padding: 7rem 0 3.5rem 0;
   }
   .team h2 {
     font-size: 2.2rem;
@@ -1430,7 +1432,7 @@ header {
   }
   .team__members {
     flex-direction: column;
-    padding: 3rem 0;
+    padding: 0;
     gap: 4rem;
   }
   .team__members__core {
